fix: resolve remaining getKey() and event deprecation warnings
- Replace Keyed.getId() removal with getKey().toString() in block listeners
- Replace CacheBuilder.expireAfterWrite(long,TimeUnit) with Duration variant
- Replace LegacyComponentSerializer.INSTANCE with .legacySection()
- Replace PotionEffectType.getName() with getKey().getKey()
- Replace Effect.SMOKE with Particle.SMOKE API
- Replace PlayerDeathEvent.setDeathMessage() with deathMessage(Component)
- Add SuppressWarnings to deprecated event constructors and APIs
- Fix WorldGuardCommands.java Thread.getId() -> threadId()